[gd_scene load_steps=11 format=2]

[ext_resource path="res://themes/Montserrat-Medium.tres" type="DynamicFont" id=1]
[ext_resource path="res://settings/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://themes/FlatUI/kenneyUI-blue.tres" type="Theme" id=3]
[ext_resource path="res://assets/carAudio/Sports-Car-Idle.mp3" type="AudioStream" id=4]
[ext_resource path="res://settings/label_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/carAudio/car-drive.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/play.svg" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.0784314, 0.0784314, 0.0941176, 0.941176 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFontData" id=2]
font_path = "res://themes/Montserrat-Medium.otf"

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = SubResource( 2 )

[node name="SettingsMneu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenuPanel" type="PopupPanel" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="SettingsMenuPanel"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -442.0
margin_top = 20.0
margin_right = 442.0
margin_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/hseparation = 20
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HLabels" type="HBoxContainer" parent="SettingsMenuPanel/GridContainer"]
margin_right = 161.0
margin_bottom = 247.0
alignment = 2

[node name="VLabels" type="VBoxContainer" parent="SettingsMenuPanel/GridContainer/HLabels"]
margin_right = 161.0
margin_bottom = 247.0
custom_constants/separation = 30

[node name="Resolution" type="Label" parent="SettingsMenuPanel/GridContainer/HLabels/VLabels"]
margin_right = 161.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 5 )
text = "Aufl√∂sung:"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Label" parent="SettingsMenuPanel/GridContainer/HLabels/VLabels"]
margin_top = 68.0
margin_right = 161.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 5 )
text = "Vollbild:"
align = 2
valign = 1

[node name="MasterVolume" type="Label" parent="SettingsMenuPanel/GridContainer/HLabels/VLabels"]
margin_top = 136.0
margin_right = 161.0
margin_bottom = 174.0
custom_fonts/font = ExtResource( 5 )
text = "Master:"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FxVolume" type="Label" parent="SettingsMenuPanel/GridContainer/HLabels/VLabels"]
margin_top = 204.0
margin_right = 161.0
margin_bottom = 242.0
custom_fonts/font = ExtResource( 5 )
text = "Fx:"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HControls" type="HBoxContainer" parent="SettingsMenuPanel/GridContainer"]
margin_left = 181.0
margin_right = 424.0
margin_bottom = 247.0

[node name="VControls" type="VBoxContainer" parent="SettingsMenuPanel/GridContainer/HControls"]
margin_right = 243.0
margin_bottom = 247.0
theme = ExtResource( 3 )
custom_constants/separation = 15

[node name="ResolutionButton" type="OptionButton" parent="SettingsMenuPanel/GridContainer/HControls/VControls"]
margin_right = 243.0
margin_bottom = 50.251
toggle_mode = false

[node name="FullscreenButton" type="Button" parent="SettingsMenuPanel/GridContainer/HControls/VControls"]
margin_top = 65.0
margin_right = 243.0
margin_bottom = 117.251
custom_fonts/font = ExtResource( 1 )

[node name="MasterVolume" type="HBoxContainer" parent="SettingsMenuPanel/GridContainer/HControls/VControls"]
margin_top = 132.0
margin_right = 243.0
margin_bottom = 182.0

[node name="MasterVolumeSlider" type="HSlider" parent="SettingsMenuPanel/GridContainer/HControls/VControls/MasterVolume"]
margin_right = 192.0
margin_bottom = 42.0
min_value = -25.0
max_value = 10.0
step = 0.1

[node name="MasterVolumePlay" type="Button" parent="SettingsMenuPanel/GridContainer/HControls/VControls/MasterVolume"]
margin_left = 196.0
margin_right = 243.324
margin_bottom = 50.251
custom_fonts/font = SubResource( 3 )
icon = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FxVolume" type="HBoxContainer" parent="SettingsMenuPanel/GridContainer/HControls/VControls"]
margin_top = 197.0
margin_right = 243.0
margin_bottom = 247.0

[node name="FxVolumeSlider" type="HSlider" parent="SettingsMenuPanel/GridContainer/HControls/VControls/FxVolume"]
margin_right = 192.0
margin_bottom = 42.0
min_value = -25.0
max_value = 10.0
step = 0.1

[node name="FxVolumePlay" type="Button" parent="SettingsMenuPanel/GridContainer/HControls/VControls/FxVolume"]
margin_left = 196.0
margin_right = 243.324
margin_bottom = 50.251
custom_fonts/font = SubResource( 3 )
icon = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="FxAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "car_sound"
